@@ -1825,6 +1825,7 @@ handle_qxfer_threads_worker (thread_info *thread, std::string *buffer)
   int core = the_target->core_of_thread (ptid);
   char core_s[21];
   const char *name = the_target->thread_name (ptid);
+  std::string id_str = the_target->thread_id_str (thread);
   int handle_len;
   gdb_byte *handle;
   bool handle_status = the_target->thread_handle (ptid, &handle, &handle_len);
@@ -1847,6 +1848,9 @@ handle_qxfer_threads_worker (thread_info *thread, std::string *buffer)
 
   if (name != NULL)
     string_xml_appendf (*buffer, " name=\"%s\"", name);
+
+  if (!id_str.empty ())
+    string_xml_appendf (*buffer, " id_str=\"%s\"", id_str.c_str ());
 
   if (handle_status)
     {
